fixed routes in index files

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -29,7 +29,7 @@
             <td class="table-cell p-3">Gets a list of coffee' names and ids</td>
             <td class="table-cell p-3">
               <a href="/coffee" target="_blank" class="text-blue-700"
-                >List Cat</a
+                >List Coffee</a
               >
             </td>
           </tr>
@@ -41,7 +41,7 @@
               parameter
             </td>
             <td class="table-cell p-3">
-              <a href="/cat/1" target="_blank" class="text-blue-700"
+              <a href="/coffee/1" target="_blank" class="text-blue-700"
                 >Get Coffee 1</a
               >
             </td>
